--- a/notebooks/python03.ipynb
+++ b/notebooks/python03.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "프로그램 실행의 흐름을 제어하는 세 종류의 제어문(제어 명령문)을 소개한다.\n",
+    "프로그램 실행의 흐름을 제어하는 여러 종류의 제어문(제어 명령문)을 소개한다.\n",
     "\n",
     "* `if` 조건문\n",
     "* `for` 반복문\n",
@@ -64,15 +64,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'bc'가 'abcde'의 부분문자열이다.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if 'bc' in 'abcde':\n",
     "    print(\"'bc'가 'abcde'의 부분문자열이다.\")"
@@ -89,15 +81,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'음수'입니다.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = -2\n",
     "\n",
@@ -131,15 +115,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "if문을 건너뛰었음!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if 'ac' in 'abcde':\n",
     "    print(\"'ac'가 'abcde'의 부분문자열이다.\")\n",
@@ -158,15 +134,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "if문을 건너뛰었음!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 4\n",
     "\n",
@@ -213,15 +181,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 2\n",
     "\n",
@@ -235,15 +195,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 7\n",
     "\n",
@@ -308,15 +260,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 보다 작은 양수\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 4\n",
     "\n",
@@ -391,10 +335,10 @@
      "evalue": "division by zero",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-2fb2320cb664>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mc\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0md\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-2fb2320cb664>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mc\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0md\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
      ]
     }
    ],
@@ -1181,6 +1125,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 예제: `for` 반복문\n",
+    "\n",
+    "예를 들어, \"aardvarks\"에서 알파벳 `'a'`만 대문자 `'A'`로 변환하고 \n",
+    "나머지 문자는 버리는 코드를 작성하라.\n",
+    "\n",
+    "힌트: `continue` 활용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AAA\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_word = 'aardvarks'\n",
+    "new_word = ''\n",
+    "for char in a_word:\n",
+    "    if char == 'a':\n",
+    "        new_word = new_word + 'A'\n",
+    "    else:\n",
+    "        continue\n",
+    "        new_word = new_word + char  # 이 줄은 무시된다.\n",
+    "\n",
+    "print(new_word)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 예제: `while` 반복문\n",
     "\n",
     "0부터 10까지의 정수 중에서 홀수만 출력해보자."
@@ -1188,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1227,14 +1209,26 @@
    "source": [
     "`for` 또는 `while` 반복문이 실행되는 도중에\n",
     "`break` 예약어를 만나는 순간 현재 실행되는 반복문 자체의 실행을 멈추고,\n",
-    "다음 명령을 실행한다. \n",
-    "\n",
-    "예를 들어, 문자열에 포함된 숫자 중에서 4를 만나는 순간에 실행을 반복문의 실행을 멈추게 해보자."
+    "다음 명령을 실행한다. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 예제"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "문자열에 포함된 숫자 중에서 4를 만나는 순간에 실행을 반복문의 실행을 멈추게 해보자."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1262,6 +1256,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 예제: `for` 반복문\n",
+    "\n",
+    "예를 들어, \"aardvarks\"에서 알파벳 `'a'`는 대문자 `'A'`로 변환하고 \n",
+    "나머지 문자를 만나는 순간 멈추게 하는 코드를 작성하라.\n",
+    "\n",
+    "힌트: `break` 활용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AA\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_word = 'aardvarks'\n",
+    "new_word = ''\n",
+    "for char in a_word:\n",
+    "    if char == 'a':\n",
+    "        new_word = new_word + 'A'\n",
+    "    else:\n",
+    "        break\n",
+    "        new_word = new_word + char  # 이 줄은 무시된다.\n",
+    "\n",
+    "print(new_word)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "`break` 예약어는 자기를 감싸는 `for` 또는 `while` 반복문의 실행을 멈추게 한다.\n",
     "하지만 다른 반복문에 의해 감싸져 있다면 해당 반복문을 이어서 실행한다.\n",
     "\n",
@@ -1274,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1325,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1341,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1370,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1446,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1523,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1556,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1578,6 +1610,120 @@
     "    else:\n",
     "        x = 3 * x + 1\n",
     "        print(x, end=' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 문제 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "아래 코드는 사용자로부터 숫자를 입력 받아 짝수/홀수 여부를 판명해준다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "정수를 입력하세요: 7\n",
+      "7는 홀수입니다.\n",
+      "프로그램을 끝내시겠습니까? YES=1, NO=0: 0\n",
+      "정수를 입력하세요: 4\n",
+      "4는 짝수입니다.\n",
+      "프로그램을 끝내시겠습니까? YES=1, NO=0: 1\n",
+      "종료합니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    x=int(input(\"정수를 입력하세요: \"))\n",
+    "\n",
+    "    if x%2==0:\n",
+    "        print(f\"{x}는 짝수입니다.\")\n",
+    "    else:\n",
+    "        print(f\"{x}는 홀수입니다.\")\n",
+    "\n",
+    "    a=int(input(\"프로그램을 끝내시겠습니까? YES=1, NO=0: \"))\n",
+    "    if a==0: \n",
+    "        continue\n",
+    "    else:\n",
+    "        break\n",
+    "\n",
+    "print(\"종료합니다.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "위 코드를 수정해서 컴퓨터가 임의로 1부터 100 사이의 수를 생성하게 한 후에 맞추는 프로그램을 작성하라.\n",
+    "단, 숫자를 맞추면 바로 멈추고, 그렇지 않으면 찍은 값에 대한 정보를 크다, 작다의 형태로 전달해야 한다.\n",
+    "\n",
+    "힌트: `random` 모듈의 `randint()` 함수 활용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "맞춰보세요: 50\n",
+      "틀렸습니다.\n",
+      "너무 커!\n",
+      "맞춰보세요: 25\n",
+      "틀렸습니다.\n",
+      "너무 작아!\n",
+      "맞춰보세요: 38\n",
+      "틀렸습니다.\n",
+      "너무 작아!\n",
+      "맞춰보세요: 44\n",
+      "틀렸습니다.\n",
+      "너무 작아!\n",
+      "맞춰보세요: 47\n",
+      "정답입니다.\n",
+      "종료합니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "# 컴퓨터가 1에서 100사의 값을 무작위로 선택\n",
+    "secret = random.randint(1, 100)\n",
+    "\n",
+    "# secret을 맞출 때까지 반복해서 guess함.\n",
+    "while True:\n",
+    "    guess = int(input(\"맞춰보세요: \"))\n",
+    "\n",
+    "    if secret == guess:\n",
+    "        print(f\"정답입니다.\")\n",
+    "        break                   # 정답이면 게임 종료\n",
+    "\n",
+    "    else:\n",
+    "        print(f\"틀렸습니다.\")\n",
+    "\n",
+    "        if guess < secret:     # 오답이면 크기 비교 알려주기\n",
+    "            print(\"너무 작아!\")\n",
+    "        else:\n",
+    "            print(\"너무 커!\")\n",
+    "\n",
+    "\n",
+    "print(\"종료합니다.\")"
    ]
   }
  ],
