--- a/notebooks/python03.ipynb
+++ b/notebooks/python03.ipynb
@@ -1338,6 +1338,131 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 예제"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "아래 코드는 사용자로부터 숫자를 입력 받아 짝수/홀수 여부를 판명해준다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "정수를 입력하세요: 7\n",
+      "7는 홀수입니다.\n",
+      "프로그램을 끝내시겠습니까? YES=1, NO=0: 0\n",
+      "정수를 입력하세요: 4\n",
+      "4는 짝수입니다.\n",
+      "프로그램을 끝내시겠습니까? YES=1, NO=0: 1\n",
+      "종료합니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    x=int(input(\"정수를 입력하세요: \"))   # 정수 하나 입력\n",
+    "\n",
+    "    if x%2==0:                       # 짝수인 경우\n",
+    "        print(f\"{x}는 짝수입니다.\")\n",
+    "    else:                            # 홀수인 경우\n",
+    "        print(f\"{x}는 홀수입니다.\")\n",
+    "\n",
+    "    # 게임을 계속 진행할지 여부 묻기\n",
+    "    a=int(input(\"프로그램을 끝내시겠습니까? YES=1, NO=0: \"))\n",
+    "    \n",
+    "    if a==0:                        # 게임 계속 진행\n",
+    "        continue\n",
+    "    else:                           # 게임 종료\n",
+    "        break\n",
+    "\n",
+    "print(\"종료합니다.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__참고:__ 위 코드에서 사용된 `continue` 대신에 `pass` 사용해도 동일하게 작동한다.\n",
+    "이유는 `pass`를 사용하면 바로 아래에 있는 코드로 넘어가야 하는 데 더 이상 실행할 코드가 없다.\n",
+    "따라서 다시 `while` 반복문의 처음으로 돌아간다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이제 위 코드를 수정해서 컴퓨터가 임의로 1부터 100 사이의 수를 생성하게 한 후에 맞추는 프로그램을 작성해보자.\n",
+    "단, 숫자를 맞추면 바로 멈추고, 그렇지 않으면 찍은 값에 대한 정보를 크다, 작다의 형태로 전달해야 한다.\n",
+    "\n",
+    "힌트: `random` 모듈의 `randint()` 함수 활용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "맞춰보세요: 50\n",
+      "틀렸습니다.\n",
+      "너무 커!\n",
+      "맞춰보세요: 25\n",
+      "틀렸습니다.\n",
+      "너무 작아!\n",
+      "맞춰보세요: 38\n",
+      "틀렸습니다.\n",
+      "너무 작아!\n",
+      "맞춰보세요: 44\n",
+      "틀렸습니다.\n",
+      "너무 작아!\n",
+      "맞춰보세요: 47\n",
+      "정답입니다.\n",
+      "종료합니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "# 컴퓨터가 1에서 100사의 값을 무작위로 선택\n",
+    "secret = random.randint(1, 100)\n",
+    "\n",
+    "# secret을 맞출 때까지 반복해서 guess함.\n",
+    "while True:\n",
+    "    guess = int(input(\"맞춰보세요: \"))\n",
+    "\n",
+    "    if secret == guess:\n",
+    "        print(f\"정답입니다.\")\n",
+    "        break                   # 정답이면 게임 종료\n",
+    "\n",
+    "    else:\n",
+    "        print(f\"틀렸습니다.\")\n",
+    "\n",
+    "        if guess < secret:     # 오답이면 크기 비교 알려주기\n",
+    "            print(\"너무 작아!\")\n",
+    "        else:\n",
+    "            print(\"너무 커!\")\n",
+    "\n",
+    "\n",
+    "print(\"종료합니다.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 연습"
    ]
   },
@@ -1610,120 +1735,6 @@
     "    else:\n",
     "        x = 3 * x + 1\n",
     "        print(x, end=' ')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 문제 4"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "아래 코드는 사용자로부터 숫자를 입력 받아 짝수/홀수 여부를 판명해준다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "정수를 입력하세요: 7\n",
-      "7는 홀수입니다.\n",
-      "프로그램을 끝내시겠습니까? YES=1, NO=0: 0\n",
-      "정수를 입력하세요: 4\n",
-      "4는 짝수입니다.\n",
-      "프로그램을 끝내시겠습니까? YES=1, NO=0: 1\n",
-      "종료합니다.\n"
-     ]
-    }
-   ],
-   "source": [
-    "while True:\n",
-    "    x=int(input(\"정수를 입력하세요: \"))\n",
-    "\n",
-    "    if x%2==0:\n",
-    "        print(f\"{x}는 짝수입니다.\")\n",
-    "    else:\n",
-    "        print(f\"{x}는 홀수입니다.\")\n",
-    "\n",
-    "    a=int(input(\"프로그램을 끝내시겠습니까? YES=1, NO=0: \"))\n",
-    "    if a==0: \n",
-    "        continue\n",
-    "    else:\n",
-    "        break\n",
-    "\n",
-    "print(\"종료합니다.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "위 코드를 수정해서 컴퓨터가 임의로 1부터 100 사이의 수를 생성하게 한 후에 맞추는 프로그램을 작성하라.\n",
-    "단, 숫자를 맞추면 바로 멈추고, 그렇지 않으면 찍은 값에 대한 정보를 크다, 작다의 형태로 전달해야 한다.\n",
-    "\n",
-    "힌트: `random` 모듈의 `randint()` 함수 활용"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "맞춰보세요: 50\n",
-      "틀렸습니다.\n",
-      "너무 커!\n",
-      "맞춰보세요: 25\n",
-      "틀렸습니다.\n",
-      "너무 작아!\n",
-      "맞춰보세요: 38\n",
-      "틀렸습니다.\n",
-      "너무 작아!\n",
-      "맞춰보세요: 44\n",
-      "틀렸습니다.\n",
-      "너무 작아!\n",
-      "맞춰보세요: 47\n",
-      "정답입니다.\n",
-      "종료합니다.\n"
-     ]
-    }
-   ],
-   "source": [
-    "import random\n",
-    "\n",
-    "# 컴퓨터가 1에서 100사의 값을 무작위로 선택\n",
-    "secret = random.randint(1, 100)\n",
-    "\n",
-    "# secret을 맞출 때까지 반복해서 guess함.\n",
-    "while True:\n",
-    "    guess = int(input(\"맞춰보세요: \"))\n",
-    "\n",
-    "    if secret == guess:\n",
-    "        print(f\"정답입니다.\")\n",
-    "        break                   # 정답이면 게임 종료\n",
-    "\n",
-    "    else:\n",
-    "        print(f\"틀렸습니다.\")\n",
-    "\n",
-    "        if guess < secret:     # 오답이면 크기 비교 알려주기\n",
-    "            print(\"너무 작아!\")\n",
-    "        else:\n",
-    "            print(\"너무 커!\")\n",
-    "\n",
-    "\n",
-    "print(\"종료합니다.\")"
    ]
   }
  ],
