--- a/notebooks/python04.ipynb
+++ b/notebooks/python04.ipynb
@@ -60,21 +60,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def myAbs(num):\n",
-    "    if num >= 0:\n",
-    "        z = num\n",
-    "    else:\n",
-    "        z = -num\n",
-    "    return z"
+    "    if num < 0:\n",
+    "        num = -num\n",
+    "    return num"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +92,7 @@
        "3"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +112,7 @@
        "0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,8 +444,8 @@
     "\n",
     "함수의 입력값으로 사용될 수 있는 값들의 집합이 정의역에 해당하고,\n",
     "내주는 값들의 집합이 공역에 해당한다.\n",
-    "함수가 내주는 값을 **리턴값**이라 부르기도 한다.\n",
-    "이유는 함수가 내주는 값을 보통 `return` 지정자로 지정하기 때문이다."
+    "함수가 내주는 값을 **반환값**(return)이라 부르기도 한다.\n",
+    "이유는 함수가 내주는 값을 `return` 예약어로 지정하기 때문이다."
    ]
   },
   {
@@ -461,24 +459,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "입력값을 특정 집합의 원소로 보고, 리턴값을 다른 집합의 원소로 보고,\n",
+    "입력값을 특정 집합의 원소로 보고, 반환값을 다른 집합의 원소로 보고,\n",
     "그리고 \n",
     "두 집합 사이의 대응관계를 \"수식에 따라 계산한다\"라 이해한다면 \n",
     "수학과 프로그래밍에서의 함수 개념은 동일하다.\n",
     "\n",
     "* 정의역: 함수의 입력값들로 구성된 집합\n",
-    "* 공역: 함수의 리턴값들로 구성된 집합\n",
+    "* 공역: 함수의 반환값들로 구성된 집합\n",
     "\n",
     "실제로, 수학 함수를 프로그래밍 함수로 다룰 수 있다. \n",
-    "예를 들어, 절댓값 함수는 실수에서 실수로 가는 함수이며,\n",
-    "양수는 그대로 두고, 음수는 부호를 바꿔 양수로 만든다. \n",
+    "예를 들어, 아래 소개되는 `abs()`는 실수에서 실수로 가는 함수이며,\n",
+    "절댓값을 반환한다.\n",
     "\n",
-    "절댓값에 해당하는 프로그래밍 함수는 `abs`이며, 아래와 같이 작동한다."
+    "__참고:__ 위에서 정의한 `myAbs()` 함수와 동일한 기능을 수행한다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +485,7 @@
        "3.3"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,67 +498,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "위에서 사용된 표현식 `abs(-3.3)`과 그 결과인 `3.3`의 역할은 다음과 같다.\n",
-    "\n",
-    "* `abs`: 절댓값 함수를 가리키는 이름\n",
-    "* `-3.3`: 입력값\n",
-    "* `3.3`: 리턴값"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 프로그래밍 함수의 정의역"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "앞서 프로그래밍 함수의 입력값들로 구성된 집합이 수학 함수의 정의역에 \n",
-    "해당한다고 설명하였다.\n",
-    "그런데 주의사항이 하나 있다.\n",
-    "\n",
-    "파이썬의 경우, 함수의 입력값에 어떤 제한도 없기 때문이다.\n",
-    "다만, 의도하지 않은 값이 사용될 경우, 함수의 실행 과정에서 오류가 발생한다.\n",
-    "예를 들어, `abs` 함수를 문자열과 함께 실행하면 \n",
-    "`TypeError`, 즉, 인자의 자료형에 문제가 있다는 오류가 발생한다.\n",
-    "이유는 `abs` 함수가 숫자만 다룰 수 있기 때문이다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "bad operand type for abs(): 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-952b1624c912>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'python'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: bad operand type for abs(): 'str'"
-     ]
-    }
-   ],
-   "source": [
-    "abs('python')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "따라서 프로그래밍 함수의 정의역은 입력값들 중에서 오류가 발생하지 않는 값들의 집합으로\n",
-    "보는 게 보다 더 적절하다.\n",
-    "하지만, 이것을 프로그래밍 함수의 정의역으로 **정의**(define)하지는 않을 것이다.\n",
-    "프로그래밍 함수의 정의역을 엄밀하게 정의하는 일은 보다 복잡하기에,\n",
-    "자세히 다루지 않는다. \n",
-    "다만, 개념적으로 프로그래밍 함수와 수학 함수가 유사한 면이 많다라는 정도만\n",
-    "기억해두면 좋다."
+    "하지만 앞으로 이어서 보겠지만 프로그래밍에서의 함수가 수학의 함수와 다른 기능도 함께 갖는다. "
    ]
   },
   {
@@ -574,7 +512,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "프로그래밍에서는 다루는 함수 유형을 살펴본다."
+    "프로그래밍에서는 다루는 함수들의 유형을 살펴본다."
    ]
   },
   {
@@ -588,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -611,37 +549,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 아래 함수는 변수이름 `y`를 지역변수와 전역변수로 동시에 사용했다.\n",
+    "* 아래 함수는 변수이름 `y`를 두 군데서 사용한다. \n",
+    "    하나는 함수 밖에서, 다른 하나는 함수 안에서.\n",
     "    하지만 서로 관계가 없기 때문에 일반 수학 함수처럼 작동한다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1 10\n"
-     ]
-    }
-   ],
-   "source": [
-    "y = -1\n",
-    "\n",
-    "def toto2(x):\n",
-    "    y = x**2+1\n",
-    "    return y\n",
-    "\n",
-    "# 전역변수 y는 함수와 아무 상관 없음.\n",
-    "print(y, toto2(3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -653,14 +568,104 @@
     }
    ],
    "source": [
-    "y = -1\n",
+    "y = -1           \n",
     "\n",
-    "def toto3(x):\n",
-    "    y = x**2+1\n",
+    "def toto2(x):\n",
+    "    y = x**2+1   # 함수 밖의 y와 아무 상관 없음.\n",
     "    return y\n",
     "\n",
-    "# 전역변수 y는 함수와 아무 상관 없음.\n",
+    "print(toto2(3), y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "하지만 오해를 방지하기 위해 서로 다른 기능을 수행하는 변수는 이름도 다르게 줄 것을 권장한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 -1\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = -1           \n",
+    "\n",
+    "def toto3(x):\n",
+    "    z = x**2+1\n",
+    "    return z\n",
+    "\n",
     "print(toto3(3), y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이렇게 다른 변수를 사용하면 아래와 같이 함수 밖에서 선언된 변수를 함수 안에서 사용해도 별 혼란이 \n",
+    "발생하지 않는다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 -1\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = -1           \n",
+    "\n",
+    "def toto4(x):\n",
+    "    z = x**2-y   # 함수 밖의 y 사용 가능\n",
+    "    return z\n",
+    "\n",
+    "print(toto4(3), y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "하지만 함수 밖에서 선언된 변수의 값을 변경할 수는 없다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 -1\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = -1           \n",
+    "\n",
+    "def toto5(x):\n",
+    "    y = 10       # 함수 밖의 y가 가리키는 값을 변경할 수 없음.\n",
+    "    return y\n",
+    "\n",
+    "print(toto5(3), y)"
    ]
   },
   {
@@ -674,14 +679,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 아래 함수는 함수 안에서 전역변수 `y`를 업데이트한다.\n",
-    "    이렇게 하면 `y`가 가리키는 값은 `toto` 함수의 호출에\n",
-    "    민감하게 반응한다."
+    "* 아래 함수는 함수 밖에서 선언된 `y`를 업데이트할 수 있다.\n",
+    "    이유는 `global` 예약어가 함수 밖에서 선언된 변수를 수정할 수 있는 권한을 부여하기 때문이다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -695,38 +699,13 @@
    "source": [
     "y = -1\n",
     "\n",
-    "def toto4(x):\n",
+    "def toto6(x):\n",
     "    global y\n",
     "    y = x**2+1\n",
     "    return y\n",
     "\n",
     "# toto 함수가 실행되면 y 가 업데이트 됨.\n",
-    "print(toto4(3), y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1 10\n"
-     ]
-    }
-   ],
-   "source": [
-    "y = -1\n",
-    "\n",
-    "def toto5(x):\n",
-    "    global y\n",
-    "    y = x**2+1\n",
-    "    return y\n",
-    "\n",
-    "# y 값을 먼저 확인 한 후에 toto 함수가 실행\n",
-    "print(y, toto5(3))"
+    "print(toto6(3), y)"
    ]
   },
   {
@@ -740,7 +719,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 함수의 리턴값이 지정되지 않으면 `None`을 내줌.\n",
+    "* 함수의 반환값이 지정되지 않으면 `None`을 내줌.\n",
     "* `None`은 아무런 의미가 없는 값임.\n",
     "* 대신에 아래 함수를 실행하면 변수 `y`의 값을 업데이트 함.\n",
     "* 수학엔 이런 함수 없음."
@@ -748,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -762,75 +741,40 @@
    "source": [
     "y = -1\n",
     "\n",
-    "def toto6(x):\n",
-    "    global y\n",
-    "    y = x**2+1\n",
-    "    \n",
-    "print(toto6(3), y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1 None\n"
-     ]
-    }
-   ],
-   "source": [
-    "y = -1\n",
-    "\n",
     "def toto7(x):\n",
     "    global y\n",
     "    y = x**2+1\n",
     "    \n",
-    "print(y, toto7(3))"
+    "print(toto7(3), y)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 함수의 리턴값<a id='funReturn'></a>"
+    "## 함수의 반환값<a id='funReturn'></a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "앞서 살펴 보았던 `toto1`~`toto5` 같은 함수의 경우 `return` 지정자 이후에 \n",
-    "위치한 값 `y`를 내주는(output) 값으로 지정한다.\n",
-    "즉, 숫자 `x`를 입력(input)값으로 사용하여 실행하면\n",
-    "종료하기 전에 \n",
-    "`y`가 가리키는 값 `x**2+1`를 내준다.\n",
-    "이렇게 함수가 실행을 종료하면서 내주는 값을 **리턴값**이라 부른다."
+    "### 반환값이 명시되지 않은 함수"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 리턴값이 명시되지 않은 함수"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`toto6`와 `toto7`은 `return` 지정자를 사용하지 않았다.\n",
+    "`toto6()`와 `toto7()`은 `return` 예약어를 사용하지 않았다.\n",
     "이런 경우 파이썬은 암묵적으로 `return None`을 지정한다.\n",
-    "즉, 리턴값이 항상 `None` 값인 것이다.\n",
+    "즉, 반환값이 항상 `None` 값인 것이다.\n",
     "\n",
     "**주의:** `None`은 아무런 의미를 갖지 않는 값이다.\n",
     "\n",
     "파이선 내장함수(built-in functions)들 중에 \n",
-    "`print` 함수가 리턴값이 명시되지 않은 대표적인 함수이다. \n",
-    "예를 들어, 아래 코드는 `print` 함수의 리턴값을 확인할 수 있다."
+    "`print()` 함수가 반환값이 명시되지 않은 대표적인 함수이다. \n",
+    "예를 들어, 아래 코드에서 `print()` 함수의 반환값을 확인할 수 있다."
    ]
   },
   {
@@ -856,7 +800,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**주의:** 위 코드를 실행한 결과의 첫째 줄에서 보이는 `1`은 `print` 함수의 리턴값이 아니라,\n",
+    "**주의:** 위 코드를 실행한 결과의 첫째 줄에서 보이는 `1`은 `print` 함수의 반환값이 아니라,\n",
     "`print(1)`을 실행하여 모니터에 숫자 1을 출력하는 `print` 함수의 \n",
     "**부수효과**(side effect)에 불과하다.\n",
     "함수의 부수효과에 대해서는 아래에서 좀 더 자세히 다룬다."
@@ -866,7 +810,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 함수의 리턴값은 단 하나"
+    "### 함수의 반환값은 단 하나"
    ]
   },
   {
@@ -973,7 +917,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "앞서 살펴 보았듯이 함수의 리턴값을 저장하거나 다른 함수의 인자로 전달할 수 있다.\n",
+    "앞서 살펴 보았듯이 함수의 반환값을 저장하거나 다른 함수의 인자로 전달할 수 있다.\n",
     "즉, 하나의 값으로 다룰 수 있으며,\n",
     "이렇게 함수를 이용하여 표현된 값을 **함수 표현식**이라 부른다. \n",
     "\n",
@@ -1148,7 +1092,7 @@
    "source": [
     "### 부수효과가 없는 함수 (Pure functions)\n",
     "\n",
-    "함수가 호출되어 실행되어 실행결과를 리턴값으로 내줄 때까지 \n",
+    "함수가 호출되어 실행되어 실행결과를 반환값으로 내줄 때까지 \n",
     "실행결과를 생성하기 위한 일 이외에 다른 어떤 일도 하지 않는다면 \n",
     "그 함수를 부수효과가없는 함수라 부른다.\n",
     "\n",
@@ -1215,7 +1159,7 @@
    "metadata": {},
    "source": [
     "즉, `print(\"Hello Python\")`을 실행하였을 때 보여주는 \n",
-    "`'Hello Python'`은 리턴값이 아니라 `print` 함수가 부수적으로 하는 일이다."
+    "`'Hello Python'`은 반환값이 아니라 `print` 함수가 부수적으로 하는 일이다."
    ]
   },
   {
@@ -1271,7 +1215,7 @@
     "<table cellspacing=\"20\">\n",
     "<tr>\n",
     "<td>\n",
-    "<img src=\"images/fun_print.png\">\n",
+    "<img src=\"https://raw.githubusercontent.com/codingalzi/mle/master/notebooks/images/fun_print.png\">\n",
     "</td>\n",
     "</tr>\n",
     "</table>\n",
@@ -1660,7 +1604,7 @@
     "<table cellspacing=\"20\">\n",
     "<tr>\n",
     "<td>\n",
-    "<img src=\"images/collatz01.png\">\n",
+    "<img src=\"https://raw.githubusercontent.com/codingalzi/mle/master/notebooks/images/collatz01.png\">\n",
     "</td>\n",
     "</tr>\n",
     "</table>\n",
@@ -2058,7 +2002,7 @@
     "프레임은 모든 함수와 변수의 생성, 호출, 삭제 과정을 기록한다.\n",
     "\n",
     "또한 하나의 함수가 호출될 때마다 하나의 프레임이 임시로 생성되었다가 함수의 실행이 종료되면 해당 함수의\n",
-    "리턴값을 다른 프레임에 넘겨 준 후에 사라지는 과정이 반복된다. 이렇게 특정 함수호출과 관련된 프레임을 **지역 프레임**이라 \n",
+    "반환값을 다른 프레임에 넘겨 준 후에 사라지는 과정이 반복된다. 이렇게 특정 함수호출과 관련된 프레임을 **지역 프레임**이라 \n",
     "부른다.\n",
     "반면에 프로그램이 실생되는 전 과정동안 살아 있는 프레임을 **전역 프레임**이라 부른다. \n",
     "\n",
@@ -2178,7 +2122,7 @@
    "metadata": {},
    "source": [
     "`myAdd` 함수는 부동소수점의 합을 계산함수라는 의도를 \n",
-    "명확히 하기 위해 `float`라는 자료형을 입력값와 리턴값에 대해 명시하였다.\n",
+    "명확히 하기 위해 `float`라는 자료형을 입력값와 반환값에 대해 명시하였다.\n",
     "\n",
     "그래서 위 함수는 마치 부동소수점에 대해서만 작동하는 것처럼 보인다.\n",
     "하지만 이는 `myAdd` 함수는 여전히 다른 자료형의 값들을 \n",
