--- a/notebooks/python04.ipynb
+++ b/notebooks/python04.ipynb
@@ -870,7 +870,7 @@
     "    for item in language:\n",
     "        if item == char:\n",
     "            return item.upper()\n",
-    "    return char"
+    "    return '해당 알파벳 없음'"
    ]
   },
   {
@@ -921,7 +921,7 @@
     {
      "data": {
       "text/plain": [
-       "'k'"
+       "'해당 알파벳 없음'"
       ]
      },
      "execution_count": 25,
@@ -982,7 +982,7 @@
     {
      "data": {
       "text/plain": [
-       "'liga'"
+       "'해당 알파벳 없음'"
       ]
      },
      "execution_count": 26,
@@ -1234,7 +1234,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div align=\"center\"><img src=\"https://raw.githubusercontent.com/codingalzi/mle/master/notebooks/images/fun_print.png\" width=\"700\"/></div>"
+    "```python\n",
+    "print(print(1), print(2)) => print(None, print(2)), 추가로 1 출력\n",
+    "                          => print(None, None), 추가로 2 출력\n",
+    "                          => None, 추가로 None None 출력\n",
+    "```"
    ]
   },
   {
@@ -1359,126 +1363,175 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. 다음 조건을 만족시키는 `right_justify`라는 함수를 정의하라.\n",
-    "    * 인자는 하나만 받으며, 매개변수는 `s`라 부른다.\n",
-    "    * 문자열 하나를 인자로 받아 실행하면 해당 문자열의 끝이 70번째 칸에 위치하도록 \n",
-    "        입력받은 문자열 앞에 충분한 공백이 위치하도록 출력(print)한다. \n",
+    "__연습 1.__ 다음 조건을 만족시키는 `inserting_tab()` 함수를 정의하라.\n",
+    "\n",
+    "* 인자는 하나만 받으며, 매개변수는 `s`라 부른다.\n",
+    "* 문자열 하나를 인자로 받아 실행하면 해당 문자열의 앞쪽에 탭(`\\t`)이 \n",
+    "    삽입된 문자열을 반환하는 동시에 화면에 출력한다.\n",
+    "\n",
     "```python\n",
-    ">>> right_justify('monty')\n",
-    "                                                                monty\n",
-    "```                                                                 \n",
-    "    힌트: 문자열 결합 및 반복, 그리고 문자열의 길이를 되돌려주는 내장함수 `len` 활용 가능.\n",
-    "<br><br>\n",
-    "1. 파이썬은 정의된 함수도 하나의 값으로 취급한다. \n",
-    "    따라서 함수를 다른 함수의 인자로 사용하거나 변수에 할당되는 값으로 사용될 수 있다. \n",
-    "    예를 들어, 아래에 정의된 `do_twice` 함수는 함수 `f`를 인자로 입력받으면\n",
-    "    그 함수를 두 번 호출하여 실행하도록 하는 함수이다. \n",
+    ">>> print(inserting_tab('python'))\n",
+    ">>>     python\n",
+    ">>>     python\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pass와 None을 각각 적절한 코드와 표현식으로 대체하라.\n",
+    "\n",
+    "def inserting_tab(s):\n",
+    "    pass\n",
+    "\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(inserting_tab(\"hello\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__연습 2.__다음과 같은 격자를 그리는 함수 `painting_check_2()`를 작성하라.\n",
+    "\n",
     "```python\n",
-    "def do_twice(f):\n",
-    "    f()\n",
-    "    f()\n",
+    "+ - - - - + - - - - +\n",
+    "|         |         |\n",
+    "|         |         |\n",
+    "|         |         |\n",
+    "|         |         |\n",
+    "+ - - - - + - - - - +\n",
+    "|         |         |\n",
+    "|         |         |\n",
+    "|         |         |\n",
+    "|         |         |\n",
+    "+ - - - - + - - - - +\n",
     "```\n",
-    "    그리고 `print_spam` 이라는 함수를 두 번 호출하도록 `do_twice`를 활용하고자 하면 \n",
-    "    아래와 같이 프로그램을 작성하면 된다.\n",
-    "    ```python\n",
-    "    def print_spam():\n",
-    "        print('spam')\n",
     "\n",
-    "    do_twice(print_spam)\n",
-    "    ```\n",
-    "    1. 이 프로그램을 직접 입력해서 실행해 보라.\n",
-    "    1. 아래 조건을 만족하도록 `do_twice` 함수를 수정하라. \n",
-    "        * 두 개의 인자를 사용한다.\n",
-    "        * 첫째 매개변수는 하나의 인자를 받는 함수를 인자로 입력받는다.\n",
-    "        * 둘째 매개변수는 첫째 인자에 사용된 함수의 인자로 사용될 수 있는 값을 인자로 입력받는다.\n",
-    "        * 첫째 인자로 사용된 함수를 둘째 인자로 사용된 값을 이용하여 두 번 연속 호출한다. \n",
-    "    1. 아래 조건을 만족하도록 `do_four` 함수를 수정하라. \n",
-    "        * 두 개의 인자를 사용한다.\n",
-    "        * 첫째 매개변수는 하나의 인자를 받는 함수를 인자로 입력받는다.\n",
-    "        * 둘째 매개변수는 첫째 인자에 사용된 함수의 인자로 사용될 수 있는 값을 인자로 입력받는다.\n",
-    "        * 첫째 인자로 사용된 함수를 둘째 인자로 사용된 값을 이용하여 네 번 연속 호출한다. \n",
-    "        * 앞서 정의된 `do_twice` 함수를 반드시 활용한다.\n",
-    "<br><br>\n",
-    "답: http://greenteapress.com/thinkpython2/code/do_four.py\n",
-    "<br><br>\n",
-    "1. 이번 문제는 지금까지 배운 내용을로 풀 수 있다. \n",
-    "    1. 다음과 같은 격자를 그리는 함수를 작성하라.\n",
-    "        ```\n",
-    "        + - - - - + - - - - +\n",
-    "        |         |         |\n",
-    "        |         |         |\n",
-    "        |         |         |\n",
-    "        |         |         |\n",
-    "        + - - - - + - - - - +\n",
-    "        |         |         |\n",
-    "        |         |         |\n",
-    "        |         |         |\n",
-    "        |         |         |\n",
-    "        + - - - - + - - - - +\n",
-    "        ```\n",
-    "        힌트: 한 줄에 하나 이상의 값을 출력하려면 `print` 함수에 여러 인자를 사용하면 된다.\n",
-    "        ```python\n",
-    "        print('+', '-')\n",
-    "        ```\n",
-    "        `print` 함수는 기본적으로 줄바꿈을 실행한다.\n",
-    "        줄바꿈을 하지 않기 위해서는 에를 들어 아래와 같이 실행하면 된다.\n",
-    "        ```\n",
-    "        print('+', end=' ')\n",
-    "        print('-')\n",
-    "        ```\n",
-    "        위 프로그램을 실행하면 `+ -` 형식으로 출력된다. \n",
-    "        <br><br>\n",
-    "    1. 4개의 행과 4개의 열을 갖는 격자를 그리는 함수를 작성하라.\n",
+    "단, 입력값은 사용하지 않으며, 반환값은 `None`으로 지정한다.\n",
     "\n",
-    "    답: http://greenteapress.com/thinkpython2/code/grid.py\n",
-    "    <br><br>\n",
-    "    이 연습문제는 아래 책의 Oualline에 포함된 연습문제를 응용하였다. \n",
-    "    \n",
-    "            Practical C Programming, Third Edition, O’Reilly Media, 1997.\n",
+    "힌트: 한 줄에 하나 이상의 값을 출력하려면 `print()` 함수에 여러 인자를 사용하면 된다.\n",
     "\n",
-    "    1. 위 함수를 일반화 하라. 즉, 입력값 n이 주어지면\n",
-    "        n개의 행과 n개의 열을 갖는 격자를 그리는 함수를 작성하라.\n",
-    "        <br><br>\n",
+    "```python\n",
+    "print('+', '-')\n",
+    "```\n",
     "\n",
-    "1. `printItems` 수정하여 `moBong`에 포함된 항목들을 아래와 같이 \n",
-    "    출력하도록 하는 `printItems2` 함수를 구현하라.\n",
+    "`print()` 함수는 또한 기본적으로 줄바꿈을 실행한다.\n",
+    "줄바꿈을 하지 않기 위해서는 에를 들어 아래와 같이 실행하면 된다.\n",
     "\n",
-    "        기생충\n",
-    "        2019\n",
-    "            설국열차\n",
-    "            2013\n",
-    "                살인의 추억\n",
-    "                2003\n",
+    "```python\n",
+    "print('+', end=' ')\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pass 를 적절한 코드로 대체하라.\n",
     "\n",
-    "    **힌트**\n",
-    "    * `printItems` 함수의 인자를 두 개로 수정한다. \n",
-    "        하나는 리스트의 인자를 다루며, 다른 하나는 들어쓰기 정도를 다루는 \n",
-    "        인자를 하나 받는다.\n",
-    "        \n",
-    "        ```python\n",
-    "        def printItems2(aList, level):\n",
-    "        명령문\n",
-    "        ```\n",
+    "def painting_check_2():\n",
+    "    pass\n",
     "\n",
-    "    * 위에서 `level` 매개변수의 인자는 탭키를 사용하는 횟수를 나타내도록 한다. \n",
-    "        그러면 `printItems2(moBong, 0)`을 실행하면 원하는 결과가 나와야 한다.\n",
-    "    * 탭 출력은 `print('\\t')`를 이용하면 된다.\n",
-    "    <br><br>\n",
-    "1. 위 과제에서 구현한 `printItems2` 함수를 아래와 같이 수정하라.\n",
-    "    * 인자수를 세 개로 늘린다.\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "painting_check_2()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__연습 3.__ 4개의 행과 4개의 열을 갖는 격자를 그리는 함수 `painting_check_4()`를 작성하라.\n",
+    "단, 입력값은 없으며, 반환값은 사용된 `+` 기호의 개수이다.\n",
     "\n",
-    "        ```python\n",
-    "        def printItems3(aList, level, indent=False):\n",
-    "            명령문\n",
-    "        ```\n",
+    "힌트: 함수의 기능을 분리하여 여러 개의 함수로 정의한 다음에 정의된 함수들을 적절하게 조합하라."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pass와 None을 각각 적절한 코드와 표현식으로 대체하라.\n",
     "\n",
-    "    * `indent` 매개변수의 옵션인자 값이 `True`이면 연습4에서 처럼 들여쓰기를 하고, \n",
-    "        `False`이면 들여쓰기를 하지 않아야 한다.\n",
-    "    <br><br>\n",
-    "1. `printItems` 함수를 재귀가 아닌 `while` 함수를 이용하여 구현하라.\n",
+    "def painting_check_4():\n",
+    "    pass\n",
     "\n",
-    "    **힌트:** `while` 반복문에 사용되는 조건식을 선택하는 게 핵심이다.\n",
-    "    재귀로 구현된 함수로부터 이에대한 힌트를 얻을 수 있다."
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "painting_check_4()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__연습 4.__ 연습 2와 연습 3의 함수를 일반화하여 입력값 n이 주어지면 \n",
+    "n개의 행과 n개의 열을 갖는 격자를 그리는 함수 `painting_check()`를 작성하라.\n",
+    "단, 입력값은 양의 정수를 받는 n이며, 반환값은 사용된 `+` 기호의 개수이다.\n",
+    "또한 `n=4`를 키워드 인자로 사용한다.\n",
+    "\n",
+    "힌트: 함수의 입력값 n에 대한 for 반복문을 활용하라."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pass와 None을 각각 적절한 코드와 표현식으로 대체하라.\n",
+    "\n",
+    "def painting_check(n=4):\n",
+    "    pass\n",
+    "\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "painting_check()"
    ]
   }
  ],
